# valshardstudio

./: .gitignore  BUGS.md  CHECKPOINTS.md  CMakeLists.txt  LICENSE  LICENSE-ASSETS.md  PORTING_WINDOWS.md  PROGRESS.md  README.md
.github/workflows/: build.yml
app/: AppDelegate.cpp  AppDelegate.h  DragLabel.cpp  DragLabel.h  IpcBridge.cpp  IpcBridge.h  NativeMenu.cpp  NativeMenu.h  NativeMenu.mm  PlatformSpawn.cpp  PlatformSpawn.h
app/UILayoutEditor/: AUTOMATION.md  CMakeLists.txt
app/UILayoutEditor/src/UILayoutEditor/: CsdModel.cpp  CsdModel.h  Editor.cpp  Editor.h  EditorDocument.cpp  EditorInspect.cpp  EditorTimeline.cpp  InspectServer.cpp  InspectServer.h  LitSpriteBinding.cpp  LitSpriteBinding.h  Log.cpp  Log.h  PlistAtlas.cpp  PlistAtlas.h  Timeline.cpp  Timeline.h  VectorMapBinding.cpp  VectorMapBinding.h
app/UILayoutEditor/src/UILayoutEditor/panels/: AssetBrowserPanel.cpp  LayoutPanel.cpp  Panels.h  PropertiesPanel.cpp  SceneTreePanel.cpp  SpriteCatalogPanel.cpp  SpriteEditorPanel.cpp  TimelinePanel.cpp
app/UILayoutEditor/tests/: CMakeLists.txt  doctest_main.cpp  test_csd_roundtrip.cpp  test_editor_logic.cpp  test_timeline.cpp
extensions/OCSExtension/: CMakeLists.txt  LICENSE  README.md
extensions/OCSExtension/src/OCSExtension/: LitSpriteNode.cpp  LitSpriteNode.h  LottieNode.cpp  LottieNode.h  OCSExtension.cpp  OCSExtension.h  SvgImageNode.cpp  SvgImageNode.h  VectorMapNode.cpp  VectorMapNode.h
mcp-server/: README.md  pyproject.toml
mcp-server/src/walshard_mcp/: __init__.py  __main__.py  client.py  server.py
proj.ios_mac/mac/: Icon.icns  main.cpp
